mainc.log
main.c:152:28: error: too few arguments to function call, expected 2, have 0
      network_get_channels();
      ~~~~~~~~~~~~~~~~~~~~ ^
./network.h:65:5: note: 'network_get_channels' declared here
int network_get_channels(Channel channels[], int *count);
    ^
main.c:153:25: error: too few arguments to function call, expected 2, have 0
      network_get_users();
      ~~~~~~~~~~~~~~~~~ ^
./network.h:66:5: note: 'network_get_users' declared here
int network_get_users(User users[], int *count);
    ^
main.c:166:26: error: too few arguments to function call, expected 2, have 0
    network_get_channels();
    ~~~~~~~~~~~~~~~~~~~~ ^
./network.h:65:5: note: 'network_get_channels' declared here
int network_get_channels(Channel channels[], int *count);
    ^
main.c:167:23: error: too few arguments to function call, expected 2, have 0
    network_get_users();
    ~~~~~~~~~~~~~~~~~ ^
./network.h:66:5: note: 'network_get_users' declared here
int network_get_users(User users[], int *count);
    ^
4 errors generated.
